CDP-BE-Pipeline/2_CD/Kubernetes/Normal/Infra/Hashicorp/service_entry_vault.yml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: vault-service-entry
spec:
  hosts:
  - vault.vault.svc.cluster.local
  ports:
  - number: 8200
    name: http
    protocol: HTTP
  location: MESH_EXTERNAL
  resolution: DNS
